<resources>
    <string name="version">Version</string>
    <string name="_VERSION_NUMBER_">1.0.0</string>
    <string name="title_home">GLIMMPSE Lite</string>
    <string name="title_design">Design</string>
    <string name="title_tutorial">Tutorial</string>
    <string name="title_groups">Number of Groups</string>
    <string name="title_solving_for">Solving For</string>
    <string name="title_smallest_group_size">Smallest Group Size</string>
    <string name="title_relative_group_size">Relative Group Size</string>
    <string name="title_type_i_error">Type I Error Rate</string>
    <string name="title_means_and_variance">Means and Variance</string>
    <string name="title_results">Results</string>
    <string name="title_power">Power</string>
    <string name="net_connection_error">Please make sure that you are connected to network.</string>
    <string name="power_value_error">"Please type a decimal number in the range of 0 to 1."</string>
    <string name="power_values_upper_limit">"You may only add up to 5 power values."</string>
    <string name="sample_size_value_upper_limit">"You may only add up to 5 sample size values."</string>
    <string name="progress_dialog_title">Please Wait!!</string>
    <string name="progress_dialog_message">Wait</string>
    <string name="menu_home">Home</string>
    <string name="menu_start">Design</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_design_condensed">Start</string>
    <string name="menu_tutorial_condensed">Learn</string>
    <string name="menu_aboutus_condensed">AboutUs</string>
    <string name="enum_power">POWER</string>
    <string name="enum_sample_size">SAMPLE_SIZE</string>
    <string name="enum_power_value">Power</string>
    <string name="enum_sample_size_value">Sample Size</string>
    <string name="back_button_label">Back</string>
    <string name="reset_button_label">Reset</string>
    <string name="clear_button_label">Clear</string>
    <string name="clear_all_button_label">Clear All</string>
    <string name="delete_all_button_label">Delete All</string>
    <string name="add_button_label">Add</string>
    <string name="email_button_label">Email Results</string>
    <string name="contact_button_label">Contact Us</string>
    <string name="save_button_label">Save Results</string>
    <string name="tutorial_list_header">Tutorial</string>
    <string name="tutorial_solving_for">Solving For</string>
    <string name="tutorial_getting_started">Getting Started</string>
    <string name="tutorial_type_one_error">Type I Error</string>
    <string name="tutorial_number_of_groups">Number Of Groups</string>
    <string name="tutorial_relative_group_size">Relative Group Size</string>
    <string name="tutorial_smallest_group_size">Smallest Group Size</string>
    <string name="tutorial_power">Power</string>
    <string name="tutorial_means_and_variance">Means and Variance</string>
    <string name="tutorial_results">Results</string>
    <string name="tutorial_solving_for_description">Solving For</string>
    <string name="tutorial_type_one_error_description">Type I Error</string>
    <string name="tutorial_number_of_groups_description">Number Of Groups</string>
    <string name="tutorial_relative_group_size_description">Relative Group Size</string>
    <string name="tutorial_smallest_group_size_description">Smallest Group Size</string>
    <string name="tutorial_power_description">Power</string>
    <string name="tutorial_means_and_variance_description">Means and Variance</string>
    <string name="ok">OK</string>
    <string name="no_net_connection_title">No internet Connection</string>
    <string name="no_net_connection_description">Not connected to internet</string>
    <string name="calculation_error_title">Could not calculate</string>
    <string name="calculation_error_description">Sorry we could not calculate the results.</string>
    <string name="description_home">Glimmpse Lite calculates power and sample size for one-way ANOVA designs with normally distributed outcomes.The software was developed by
        <a href="http://samplesizeshop.org/about-us/staff-and-students/uttara-sakhadeo/">Uttara Sakhadeo</a>, Drs.
        <a href="http://samplesizeshop.org/about-us/staff-and-students/aarti-munjal/">Aarti Munjal</a> and
        <a href="http://samplesizeshop.org/about-us/staff-and-students/sarah-kreidler/">Sarah Kreidler</a>
        \n\nFunding was procided by NIDCR 1 R01 DE020832-01A1 to the University of Florida (Keith Muller, PI; Deborah Glueck, University of Colorado site PI).       	</string>
    <string name="design_home">Start</string>
    <string name="learn_more_home">Learn More</string>
    <string name="calculate_button">Calculate</string>
    <string name="calculating_message">Please wait, calculating </string>
    <string name="loading">Loading</string>
    <string name="loading_thread">Loading</string>
    <string name="confirm_reset">Confirm Reset</string>
	<string name="reset_message">This action will clear any unsaved study design information.  Continue?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="feedback_mail_subject">Glimmpse Lite Queries</string>
    <string name="no_mail_client_error">There are no email clients installed.</string>
    <string name="description_aboutus">Glimmpse Lite was developed by 
        <a href="http://samplesizeshop.org/about-us/staff-and-students/uttara-sakhadeo/">Uttara Sakhadeo</a>, Drs. 
        <a href="http://samplesizeshop.org/about-us/staff-and-students/aarti-munjal/">Aarti Munjal</a> and 
        <a href="http://samplesizeshop.org/about-us/staff-and-students/sarah-kreidler/">Sarah Kreidler</a>. Additional support was contributed by Vijay Chander Akula.        
      \n\nGLIMMPSE Lite is a part of a large research project to provide researchers such as behavioral and social scientists with tools and education related to the following aspects of study design:
      \n\n• Calculating power and sample size for any univariate or multivariate test for the general linear multivariate model, assuming fixed predictors.
      \n• Producing confidence intervals on power estimates for designs with fixed predictors.
      \n• Producing power calculations for designs with a single Gaussian covariate.
      \n• Supporting designs with unequal group sizes and complicated covariance structures.
      \n• Creating basic power curves.
      \n\nAdditional documentation, publications and related software products are available from <a href="http://samplesizeshop.org">http://samplesizeshop.org</a>
      \n\nFor questions or report a bug, please contact us.</string>
    <string name="description_tutorial">Click on each tab to access the help page for each input.</string>
    <string name="details_tutorial">Details</string>
    <string name="description_tutorial_getting_started">Glimmpse Lite calculates power and sample size for ANOVA. To perform a calculation, you will need to: 
		&lt;br>&lt;br><ol><li>• Indicate if you would like to solve for power or sample size.</li> 
		&lt;br><li>• Specify the desired power if solving for sample size.</li> 
		&lt;br><li>• Specify the Type I error rate.</li>
		&lt;br><li>• Input the total number of groups.</li>
		&lt;br><li>• Specify the size of the smallest group if solving for power.</li>
		&lt;br><li>• Select equal or unequal group sizes.</li>
		&lt;br><li>• Enter choices for group means and within-group variance.</li>
		</ol>
		&lt;br>&lt;br>After inputting the study design, click the "Calculate" button to obtain your results.  		
		&lt;br>	
		</string>
    <string name="description_tutorial_solving_for">To begin your calculation, indicate whether you would like to solve for power or total sample size.
			&lt;br>&lt;br>• &lt;u>Power:&lt;/u>  If you have a rough idea of the number of research participants you will be able to recruit, then solving for power may be more beneficial.
			&lt;br>&lt;br>• &lt;u>Sample Size:&lt;/u>  If you have fewer restrictions on recruitment and would like to ensure a well-powered study, then solving for sample size is likely to be more useful.</string>
    <string name="description_tutorial_alpha"><p>A Type I error occurs when a scientist declares a difference when none is actually present.
        &lt;br>&lt;br>•  The Type I error rate is the probability of a Type I error occuring and is often referred to as α.
        &lt;br>• Type I error rates range from 0 to 1.
        &lt;br>• The most commonly used values are 0.01, 0.05 and 0.1.
        &lt;br>&lt;br>The Type I error screen allowes you to specify a &lt;u>single Type I error rate&lt;/u>.</p></string>
    <string name="description_tutorial_groups"><p>A one-way ANOVA design compares means amongst two or more groups.
        &lt;br>&lt;br>Use the seek bar to specify the number of groups in your study design.
        &lt;br>&lt;br>Glimmpse Lite currently supports designs with up to &lt;u>ten groups&lt;/u>.</p></string>
    <string name="description_tutorial_relative_size"><p>GLIMMPSE Lite allows the user to calculate power and sample size for ANOVA designs with equal or unequal group sizes.
			&lt;br>&lt;br>• &lt;u>For equal sizes&lt;/u>, select a "1" using the seek bar next to each study subgroup. This is the default study design.
			&lt;br>&lt;br>• &lt;u>For unequal group sizes&lt;/u>, specify the ratio of the group sizes. For example, consider a design with an active drug group and a placebo group. If twice as many study participants receive the placebo, a value of "2" would be selected for the placebo group, and a value of "1" would be selected for the active drug group.</p></string>
    <string name="description_tutorial_smallest_group"><p>If you are solving for power, you will need to specify the sample size for your study.
        &lt;br>&lt;br>On the Smallest Group Size screen, enter the number of participants in the smallest group in the study.
        &lt;br>&lt;br>You may add up to five values: power or sample size will be calculated for each value you choose.</p></string>
    <string name="description_tutorial_power"><p>If you are solving for sample size, you will need to specify the sample size for your study.        
        &lt;br>&lt;br>On the Power screen, enter the desired power for your study in the textbox and click the "Add" button.
        &lt;br>&lt;br>You may add up to five values: power or sample size will be calculated for each value you choose.</p></string>
    <string name="description_tutorial_mean_variance"><p>In power analysis it is necessary to provide values for group means and variances. The values are often obtained from published results or pilot data.
        &lt;br>&lt;br>Glimmpse Lite currently assumes equal variance across the groups.
		&lt;br>&lt;br>To access the Means and Variance screen, you will first need to specify the number of groups. The Means and Variance screen allows the user to enter the mean values they expect to observe for each study group. The user will also enter a single within group variance which will be shared across the groups.</p></string>
    <string name="description_solving_for">\nTo begin your calculation, please indicate whether you would like to solve for power or total sample size.</string>
    <string name="power">Power</string>
    <string name="sample_size">Sample Size</string>
    <string name="means_variance_list_header_group">Group</string>
    <string name="means_variance_list_header_mean">Mean</string>
    <string name="means_variance_list_header_variance">Standard\nDeviation</string>
</resources>