<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <Button
        android:id="@+id/start_button_home"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/design_home"
        android:textColor="@color/button_label_black"
        android:textSize="11dp" />

    <Button
        android:id="@+id/learn_more_button_home"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/start_button_home"
        android:layout_below="@+id/start_button_home"
        android:layout_marginTop="16dp"
        android:text="@string/learn_more_home"
        android:textColor="@color/button_label_black"
        android:textSize="11dp" />

    <TextView
        android:id="@+id/description_textView_home"
        android:layout_width="274dp"
        android:layout_height="131dp"
        android:layout_above="@+id/start_button_home"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:text="@string/description_home"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textSize="11dp" />

    <TextView
        android:id="@+id/version_textView_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/description_textView_home"
        android:layout_alignLeft="@+id/description_textView_home"
        android:layout_marginBottom="29dp"
        android:text="@string/version"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textSize="13dp" />

</RelativeLayout>
