<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:background="#D7D7D7" >

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/list_header_group"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="#D7D7D7"
        android:paddingBottom="2dip"
        android:paddingLeft="5dip"
        android:paddingTop="2dip"
        android:text="@string/means_variance_list_header_group"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/list_header_variance"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="#D7D7D7"
        android:paddingBottom="2dip"
        android:paddingRight="10dip"
        android:paddingTop="2dip"
        android:text="@string/means_variance_list_header_variance"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/list_header_mean"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/list_header_group"
        android:layout_alignBottom="@+id/list_header_group"
        android:layout_marginLeft="75dp"
        android:layout_toRightOf="@+id/list_header_group"
        android:background="#D7D7D7"
        android:paddingBottom="2dip"
        android:paddingLeft="5dip"
        android:paddingTop="2dip"
        android:text="@string/means_variance_list_header_mean"
        android:textColor="@color/black"
        android:textSize="15dp" />

</RelativeLayout> 